added another block

--- a/index.html
+++ b/index.html
@@ -526,7 +526,24 @@
 					</div>
 				</div>
 			</section>
+			<section class="profitable-price">
+				<div class="profitable-price__container">
+					<div class="profitable-price__body">
+						<div class="profitable-price__content">
+							<h2 class="profitable-price__title">ВЫГОДНАЯ ЦЕНА</h2>
+							<p class="profitable-price__text">Собственное производство и прямые поставки сырья от надежных
+								производителей создают основу для наших преимущественных цен как в розницу, так и оптом. Наша
+								способность контролировать каждый этап производства и обеспечивать значительные объемы дает нам
+								возможность предлагать вам выгодные тарифы, сочетая исключительное качество с доступностью.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="video">
+				<div class="video-container">
 
+				</div>
+			</section>
 		</div>
 	</main>
 	<script src="./js/script.js"></script>
