--- a/index.html
+++ b/index.html
@@ -540,10 +540,24 @@
 				</div>
 			</section>
 			<section class="video">
-				<div class="video-container">
-
+				<div class="video__container">
+					<div class="video__content">
+						<img src="./img/video/video_background.png" alt="video_background">
+						<button class="video__btn">
+							<img src="./img/video/btn_ellipse.png" alt="btn_ellipse">
+							<img src="./img/video/btn_polygon.png" alt="btn_polygon">
+						</button>
+					</div>
 				</div>
 			</section>
+			<section class="contact">
+
+			</section>
+			<footer>
+				<div class="footer-container">
+					<img src="./img/Logo.svg" alt="logo">
+				</div>
+			</footer>
 		</div>
 	</main>
 	<script src="./js/script.js"></script>
