--- a/index.html
+++ b/index.html
@@ -542,16 +542,38 @@
 			<section class="video">
 				<div class="video__container">
 					<div class="video__content">
-						<img src="./img/video/video_background.png" alt="video_background">
-						<button class="video__btn">
-							<img src="./img/video/btn_ellipse.png" alt="btn_ellipse">
-							<img src="./img/video/btn_polygon.png" alt="btn_polygon">
-						</button>
+						<iframe width="100%" height="640px"
+							src="https://www.youtube.com/embed/jh4C7w-dvho?si=yJgN8fm67gBrixMt" title="YouTube video player"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
-			<section class="contact">
-
+			<section class="contacts">
+				<div class="contacts__container">
+					<div class="contacts__body">
+						<h2 class="contacts__title">
+							ПОЛУЧИ <span class="contacts-title__gradient">ОПТОВЫЙ ПРАЙС</span> ПРЯМО СЕЙЧАС!
+						</h2>
+						<div class="contacts__content contacts-content">
+							<div class="contacts-content__info">
+								<h3 class="info-title">ПРЕДЛОЖЕНИЕ ДЛЯ КОРПОРАТИВНЫХ КЛИЕНТОВ</h3>
+								<p class="info-text">Индивидуальные условия! Для бизнеса, для офисов, ресторанов, кофеен, отелей
+								</p>
+							</div>
+							<div class="contacts-content__form">
+								<form action="#" class="form">
+									<input type="text" class="form-name" placeholder="имя">
+									<input type="email" class="form-email" placeholder="e-mail">
+									<input type="tel" class="form-tel" placeholder="телефон">
+									<input type="submit" class="form-submit" value="получить оптовый прайс">
+							</div>
+							<img class="coffee-left" src="./img/coffee_left.png" alt="coffee_left">
+							<img class="coffee-right" src="./img/coffee_right.png" alt="coffee_right">
+						</div>
+					</div>
+				</div>
 			</section>
 			<footer>
 				<div class="footer-container">
