--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./css/animate.min.css">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -41,7 +42,7 @@
 			</section>
 			<section class="coffee-shop">
 				<div class="coffee-items">
-					<div class="coffee-item parrot-image">
+					<div class="coffee-item parrot-image wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">100% Арабика</h3>
@@ -91,7 +92,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item rooster-image">
+					<div class="coffee-item rooster-image wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Робуста</h3>
@@ -141,7 +142,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item flamingo-image">
+					<div class="coffee-item flamingo-image wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Арабика 60% / Робуста 40%</h3>
@@ -195,8 +196,9 @@
 			</section>
 			<section class="quality-assurance">
 				<div class="quality-assurance__container">
-					<h2 class="quality-assurance__title">ГАРАНТИЯ КАЧЕСТВА!</h2>
-					<p class="quality-assurance__text">На нашем производстве мы используем передовые технологии обжарки
+					<h2 class="quality-assurance__title wow animate__zoomIn">ГАРАНТИЯ КАЧЕСТВА!</h2>
+					<p class="quality-assurance__text wow animate__zoomIn">На нашем производстве мы используем передовые
+						технологии обжарки
 						зерна, которые обеспечивают полный контроль над ароматом, текстурой и вкусом. Контроль качества
 						обжарки на каждом этапе.
 						Мы гарантируем поставки только высококачественного готового продукта с равномерной степенью
@@ -206,7 +208,7 @@
 			</section>
 			<section class="coffee-shop">
 				<div class="coffee-items">
-					<div class="coffee-item parrot-image1">
+					<div class="coffee-item parrot-image1 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">100% Арабика</h3>
@@ -256,7 +258,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item rooster-image1">
+					<div class="coffee-item rooster-image1 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Робуста</h3>
@@ -306,7 +308,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item flamingo-image1">
+					<div class="coffee-item flamingo-image1 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Арабика 60% / Робуста 40%</h3>
@@ -361,20 +363,21 @@
 			<section class="individual-approach">
 				<div class="individual-approach__container">
 					<div class="individual-approach__content">
-						<h2 class="individual-approach__title">ИНДИВИДУАЛЬНЫЙ ПОДХОД</h2>
-						<p class="individual-approach__text">В центре нашей философии лежит индивидуальность. Мы приглашаем
+						<h2 class="individual-approach__title wow animate__fadeInLeft">ИНДИВИДУАЛЬНЫЙ ПОДХОД</h2>
+						<p class="individual-approach__text wow animate__fadeInLeft">В центре нашей философии лежит
+							индивидуальность. Мы приглашаем
 							вас
 							в мир гибкого и индивидуального партнерства. Наша компания с готовностью предоставляет уникальные
 							условия сотрудничества для предприятий малого и среднего бизнеса, а также для сферы HoReCa. Мы
 							тщательно учитываем уникальные потребности каждого клиента и создаем наилучшие возможности
 							сотрудничества, гарантируя вам доступ к продукту высочайшего качества</p>
-						<button class="individual-approach__btn">Связаться с нами</button>
+						<button class="individual-approach__btn wow animate__fadeInLeft">Связаться с нами</button>
 					</div>
 				</div>
 			</section>
 			<section class="coffee-shop">
 				<div class="coffee-items">
-					<div class="coffee-item parrot-image2">
+					<div class="coffee-item parrot-image2 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">100% Арабика</h3>
@@ -424,7 +427,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item rooster-image2">
+					<div class="coffee-item rooster-image2 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Робуста</h3>
@@ -474,7 +477,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="coffee-item flamingo-image2">
+					<div class="coffee-item flamingo-image2 wow animate__zoomIn">
 						<div class="coffee-item__body">
 							<h2 class="coffee-item__title">REY NEGRO ARABICA</h2>
 							<h3 class="coffee-item__subtitle">Арабика 60% / Робуста 40%</h3>
@@ -530,8 +533,9 @@
 				<div class="profitable-price__container">
 					<div class="profitable-price__body">
 						<div class="profitable-price__content">
-							<h2 class="profitable-price__title">ВЫГОДНАЯ ЦЕНА</h2>
-							<p class="profitable-price__text">Собственное производство и прямые поставки сырья от надежных
+							<h2 class="profitable-price__title wow animate__fadeInRight">ВЫГОДНАЯ ЦЕНА</h2>
+							<p class="profitable-price__text wow animate__fadeInRight">Собственное производство и прямые
+								поставки сырья от надежных
 								производителей создают основу для наших преимущественных цен как в розницу, так и оптом. Наша
 								способность контролировать каждый этап производства и обеспечивать значительные объемы дает нам
 								возможность предлагать вам выгодные тарифы, сочетая исключительное качество с доступностью.</p>
@@ -553,16 +557,16 @@
 			<section class="contacts">
 				<div class="contacts__container">
 					<div class="contacts__body">
-						<h2 class="contacts__title">
+						<h2 class="contacts__title wow animate__zoomIn">
 							ПОЛУЧИ <span class="contacts-title__gradient">ОПТОВЫЙ ПРАЙС</span> ПРЯМО СЕЙЧАС!
 						</h2>
 						<div class="contacts__content contacts-content">
-							<div class="contacts-content__info">
+							<div class="contacts-content__info wow animate__fadeInLeft">
 								<h3 class="info-title">ПРЕДЛОЖЕНИЕ ДЛЯ КОРПОРАТИВНЫХ КЛИЕНТОВ</h3>
 								<p class="info-text">Индивидуальные условия! Для бизнеса, для офисов, ресторанов, кофеен, отелей
 								</p>
 							</div>
-							<div class="contacts-content__form">
+							<div class="contacts-content__form wow animate__fadeInRight">
 								<form action="#" class="form">
 									<input type="text" class="form-name" placeholder="имя">
 									<input type="email" class="form-email" placeholder="e-mail">
@@ -582,6 +586,7 @@
 			</footer>
 		</div>
 	</main>
+	<script src="./js/wow.min.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
