--- a/index.html
+++ b/index.html
@@ -24,21 +24,16 @@
 						</div>
 						<nav class="header__navigation">
 							<ul class="header__menu">
-								<li>
-									<a href="#">Главная</a>
-								</li>
-								<li>
-									<a href="#">Наш товар</a>
-								</li>
-								<li>
-									<a href="#"><span class="gradient-text">Получить прайс</span></a>
-								</li>
+								<li><a href="#">Главная</a></li>
+								<li><a href="#">Наш товар</a></li>
+								<li><a href="#"><span class="gradient-text">Получить прайс</span></a></li>
 							</ul>
 						</nav>
 					</header>
 					<div class="mainblock__btn">
 						<a href="#" class="mainblock-btn">Получить оптовый прайс</a>
 					</div>
+				</div>
 			</section>
 			<section class="coffee-shop">
 				<div class="coffee-items">
@@ -100,7 +95,7 @@
 								<li><span>Состав:</span> кофе натуральный жареный в зернах, средней обжарки</li>
 								<li><span>Условия хранения:</span> хранить в сухом прохладном месте, при температуре не выше 27С
 									и относительной влажности воздуха не более 75%</li>
-								<li><span>Срок годности:</span> 18 месяцев</p>
+								<li><span>Срок годности:</span> 18 месяцев</li>
 								<li><span>Масса нетто:</span> 1000 гр</li>
 								<li><span>Гост 32775-2014</span></li>
 							</ul>
@@ -266,7 +261,7 @@
 								<li><span>Состав:</span> кофе натуральный жареный в зернах, средней обжарки</li>
 								<li><span>Условия хранения:</span> хранить в сухом прохладном месте, при температуре не выше 27С
 									и относительной влажности воздуха не более 75%</li>
-								<li><span>Срок годности:</span> 18 месяцев</p>
+								<li><span>Срок годности:</span> 18 месяцев</li>
 								<li><span>Масса нетто:</span> 1000 гр</li>
 								<li><span>Гост 32775-2014</span></li>
 							</ul>
@@ -435,7 +430,7 @@
 								<li><span>Состав:</span> кофе натуральный жареный в зернах, средней обжарки</li>
 								<li><span>Условия хранения:</span> хранить в сухом прохладном месте, при температуре не выше 27С
 									и относительной влажности воздуха не более 75%</li>
-								<li><span>Срок годности:</span> 18 месяцев</p>
+								<li><span>Срок годности:</span> 18 месяцев</li>
 								<li><span>Масса нетто:</span> 1000 гр</li>
 								<li><span>Гост 32775-2014</span></li>
 							</ul>
@@ -572,6 +567,7 @@
 									<input type="email" class="form-email" placeholder="e-mail">
 									<input type="tel" class="form-tel" placeholder="телефон">
 									<input type="submit" class="form-submit" value="получить оптовый прайс">
+								</form>
 							</div>
 							<img class="coffee-left" src="./img/coffee_left.png" alt="coffee_left">
 							<img class="coffee-right" src="./img/coffee_right.png" alt="coffee_right">
